Fix styling for project-link link elements so they correctly align with edges of container element (and other content of the page)

--- a/styling.css
+++ b/styling.css
@@ -91,6 +91,14 @@ body {
   justify-content: center;
 }
 
+#project-links .project-link:first-child {
+  margin-left: 0;
+}
+
+#project-links .project-link:last-child {
+  margin-right: 0;
+}
+
 #project-links .project-link:hover {
   color: var(--accent-colour-blue);
   border-color: var(--accent-colour-blue);
